boulder/boulder/tests/compile_fail/hir/consuming_semi.bo
# Mismatched types
# expected `u32`
# found `Empty`
# (6:

fn expected_expression(t: u32) -> u32 {
    t + 2;
}